// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of an Icon control with icon 1`] = `
<Wrapper
  bottom={null}
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="star"
  id={null}
  imageFile=""
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Icon"
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "blue",
      "color": "red",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.i
    bottom={null}
    className="ui-icon fa fa-fw fa-star test-class"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    iconName="star"
    id={null}
    imageFile=""
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    notooltip={false}
    obj="Icon"
    padding={null}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "blue",
        "color": "red",
      }
    }
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  />
</Wrapper>
`;

exports[`Test creation of an Icon control with image 1`] = `
<Wrapper
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  id={null}
  imageFile="./test-icon-image.png"
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Icon"
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <styled.img
    bottom={null}
    className="ui-icon"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    iconName="bomb"
    id={null}
    imageFile="./test-icon-image.png"
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    notooltip={false}
    obj="Icon"
    padding={null}
    selected={false}
    sizing="normal"
    src="./test-icon-image.png"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  />
</Wrapper>
`;

exports[`Test making the ButtonDialog invisible 1`] = `
<Icon
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  id={null}
  imageFile=""
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Icon"
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className={null}
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    iconName="bomb"
    id={null}
    imageFile=""
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    notooltip={false}
    obj="Icon"
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={false}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "searchFocus": "#5cb85c",
          "searchMatch": "#d9534f",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.i
        bottom={null}
        className="ui-icon fa fa-fw fa-bomb"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        iconName="bomb"
        id={null}
        imageFile=""
        left={null}
        location="none"
        minHeight={null}
        minWidth={null}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        notooltip={false}
        obj="Icon"
        padding={null}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        visible={false}
        width={null}
        xcss={null}
      >
        <StyledComponent
          bottom={null}
          className="ui-icon fa fa-fw fa-bomb"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bwzfXH",
                "isStatic": false,
                "lastClassName": "cviwRQ",
                "rules": Array [
                  "
	text-align: center;
	",
                  [Function],
                  "
	",
                  [Function],
                  "
	",
                  [Function],
                  "
	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.i",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bwzfXH",
              "target": "i",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height={null}
          iconName="bomb"
          id={null}
          imageFile=""
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          notooltip={false}
          obj="Icon"
          padding={null}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={false}
          width={null}
          xcss={null}
        >
          <i
            className="ui-icon fa fa-fw fa-bomb sc-bwzfXH cviwRQ"
            contentEditable={false}
            direction="right"
            disabled={false}
            height={null}
            id={null}
            selected={false}
            style={Object {}}
            width={null}
          />
        </StyledComponent>
      </styled.i>
    </ThemeProvider>
  </Wrapper>
</Icon>
`;

exports[`Test retrieval of the Icon props object 1`] = `
Object {
  "bottom": null,
  "children": null,
  "className": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "iconName": "bomb",
  "id": null,
  "imageFile": "",
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Icon",
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test the disabling of the Icon control 1`] = `
<Icon
  bottom={null}
  className={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  id={null}
  imageFile=""
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  obj="Icon"
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Wrapper
    bottom={null}
    className={null}
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={true}
    err={null}
    errorMessage={null}
    focus={false}
    height={null}
    iconName="bomb"
    id={null}
    imageFile=""
    left={null}
    location="none"
    minHeight={null}
    minWidth={null}
    noedit={false}
    nohover={false}
    noripple={false}
    notheme={false}
    notooltip={false}
    obj="Icon"
    onError={[Function]}
    padding={null}
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    tooltip={null}
    top={null}
    visible={true}
    width={null}
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "fontFamily": "OpenSans, Georgia, serif",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "searchFocus": "#5cb85c",
          "searchMatch": "#d9534f",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.i
        bottom={null}
        className="ui-icon fa fa-fw fa-bomb"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={true}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        iconName="bomb"
        id={null}
        imageFile=""
        left={null}
        location="none"
        minHeight={null}
        minWidth={null}
        noedit={false}
        nohover={false}
        noripple={false}
        notheme={false}
        notooltip={false}
        obj="Icon"
        padding={null}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        visible={true}
        width={null}
        xcss={null}
      >
        <StyledComponent
          bottom={null}
          className="ui-icon fa fa-fw fa-bomb"
          contentEditable={false}
          controlled={true}
          direction="right"
          disabled={true}
          err={null}
          errorMessage={null}
          focus={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bwzfXH",
                "isStatic": false,
                "lastClassName": "iYiZrA",
                "rules": Array [
                  "
	text-align: center;
	",
                  [Function],
                  "
	",
                  [Function],
                  "
	",
                  [Function],
                  "
	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.i",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bwzfXH",
              "target": "i",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          height={null}
          iconName="bomb"
          id={null}
          imageFile=""
          left={null}
          location="none"
          minHeight={null}
          minWidth={null}
          noedit={false}
          nohover={false}
          noripple={false}
          notheme={false}
          notooltip={false}
          obj="Icon"
          padding={null}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        >
          <i
            className="ui-icon fa fa-fw fa-bomb sc-bwzfXH iYiZrA"
            contentEditable={false}
            direction="right"
            disabled={true}
            height={null}
            id={null}
            selected={false}
            style={Object {}}
            width={null}
          />
        </StyledComponent>
      </styled.i>
    </ThemeProvider>
  </Wrapper>
</Icon>
`;
